fix: issue with bottom line on IOS 15

--- a/web/src/mobile/styles/components/Footer.pcss
+++ b/web/src/mobile/styles/components/Footer.pcss
@@ -1,5 +1,5 @@
 .pg-mobile-footer {
-  align-items: center;
+  align-items: flex-start;
   background: var(--body-background-color);
   bottom: 0;
   box-shadow: inset 0 1px 0 var(--divider-color-level-1);
